Fix CORS and deployment config for Railway + Vercel